spacing fix

--- a/less/content.less
+++ b/less/content.less
@@ -182,7 +182,12 @@
 
     &:last-child {
       border-bottom: 1px solid #CCC;
-      padding-bottom: 6px;
+      padding-bottom: 12px;
+
+      @media (min-width: @screen-sm-min) {
+        border: 0;
+        padding-bottom: 0;
+      }
     }
 
     @media (min-width: @screen-sm-min) {
